@@ -1,4 +1,4 @@
-.TH ASPIS 8 "Dec 08 2011" "Version 0.3"
+.TH ASPIS 8 "Dec 08 2011" "Version 0.4"
 .SH NAME
 .B aspis \- a single\-task high performance http server
 .SH SYNOPSIS
@@ -218,7 +218,10 @@ Aspis 0.2 was released by Stefano Guidoni on
 December 8, 2011
 .PP
 Aspis 0.3 was released by Stefano Guidoni on
-December XX, 2011
+December 9, 2011
+.PP
+Aspis 0.3 was released by Stefano Guidoni on
+December 12, 2011
 .SH BUGS
 There are probably bugs, but we are not aware of any at this time.
 .SH AUTHOR
